chore: dep updates